--- a/Text_Categorization_RSNA_journal.ipynb
+++ b/Text_Categorization_RSNA_journal.ipynb
@@ -1064,7 +1064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "JJIp3VPuBq5F"
       },
@@ -1078,7 +1078,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "PdVgCSF3rJUz"
       },
@@ -1090,7 +1090,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1293,7 +1293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "mGjaiS5PO3tM"
       },
@@ -1321,7 +1321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "PjPL898-sNnO"
       },
@@ -1335,7 +1335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "zr4lYVsSYCRA"
       },
@@ -1347,7 +1347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "bjcQxG2UaERD"
       },
@@ -1393,7 +1393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "QVzg5o43jyCQ"
       },
@@ -1408,7 +1408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "US0XqBohO12D"
       },
@@ -1419,7 +1419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "VxGxPpT-Zjwj"
       },
@@ -1430,7 +1430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "l_YJXchqUDQm"
       },
@@ -1441,7 +1441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "aIInP9LzXDeq"
       },
@@ -1452,7 +1452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "yDftEmBnfv-5"
       },
@@ -1463,7 +1463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1501,7 +1501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "iv3q-R0y5ZTr",
         "outputId": "8bcce466-482d-492e-ef7b-8b74147fb99c",
@@ -1540,7 +1540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "qe7uoXWS5ZTu",
         "outputId": "0f3b7dde-d605-4e82-db82-4abbf644259c",
@@ -1583,7 +1583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "-EZBXhAa5ZTw"
       },
@@ -1601,7 +1601,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "hhvKGiVP5ZTv",
         "outputId": "3435807d-3e38-4e99-802a-84cf711895a6",
@@ -1650,6 +1650,76 @@
         "ax1.set_yticklabels(y_tick_topic)\n",
         "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['abstract_tokens'] =  df['abstract_preprocess'].apply(lambda x: tokenize(x))\n",
+        "df['title_tokens'] =  df['title_preprocess'].apply(lambda x: tokenize(x))"
+      ],
+      "metadata": {
+        "id": "ZIxn9p_RlYZH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('tdidf.csv', 'w') as fw:\n",
+        "    fw.write('topic;topic-abstract mean;topic-abstract std;topic-title mean;topic-title std')\n",
+        "    \n",
+        "topics = df['topic'].unique()\n",
+        "count = 0\n",
+        "dictionary = corpora.Dictionary(df['abstract_tokens'])\n",
+        "bag_of_words = [dictionary.doc2bow(doc) for doc in df['abstract_tokens']]\n",
+        "tfidf = models.TfidfModel(bag_of_words)\n",
+        "for topic in topics:\n",
+        "    print(topic)\n",
+        "    topic_data = df.loc[df['topic'] == topic]\n",
+        "    topic = preprocess(topic,lemmatize = True)\n",
+        "    topic_tokens = topic.split()\n",
+        "\n",
+        "    feature_cnt = len(dictionary.token2id)\n",
+        "    topic_vec = dictionary.doc2bow(topic_tokens)\n",
+        "\n",
+        "    index = similarities.MatrixSimilarity(tfidf[bag_of_words],num_features = feature_cnt)\n",
+        "    sim = index[tfidf[topic_vec]]\n",
+        "    print(np.mean(sim))\n",
+        "    print(np.std(sim))\n",
+        "    \n",
+        "    \n",
+        "    dictionary_title = corpora.Dictionary(topic_data['title_tokens'])\n",
+        "    bag_of_words_title = [dictionary_title.doc2bow(doc) for doc in topic_data['title_tokens']]\n",
+        "    tfidf_title = models.TfidfModel(bag_of_words_title)\n",
+        "    feature_cnt_title = len(dictionary_title.token2id)\n",
+        "    \n",
+        "    index_title = similarities.MatrixSimilarity(tfidf_title[bag_of_words_title],num_features = feature_cnt_title)\n",
+        "    sim_title = index[tfidf_title[topic_vec]]\n",
+        "    print(np.mean(sim_title))\n",
+        "    print(np.std(sim_title))\n",
+        "    \n",
+        "    with open('tdidf.csv', 'a') as fw:\n",
+        "        fw.write('\\n'+topic+';'+str(np.mean(sim))+';'+str(np.std(sim))+';'+str(np.mean(sim_title))+';'+str(np.std(sim_title)))\n"
+      ],
+      "metadata": {
+        "id": "kHdg0RUMljyT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tfidf = models.TfidfModel(bag_of_words, smartirs='ntc')\n",
+        "for doc in tfidf[bag_of_words]:\n",
+        "    print([[dictionary[id], np.around(freq,decimals=2)] for id, freq in doc])"
+      ],
+      "metadata": {
+        "id": "FtyN5rRTlx-c"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
